--- a/porsches-boobies-frontend/package.json
+++ b/porsches-boobies-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "panamera-n-boobies",
+  "name": "porsches-boobies-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,9 +19,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4"
   }
 }
